# lionagi

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SUMMARY.md  _resume_id  codex_review_pr980.md  codex_review_pr980_r2.md  implementation_notes.md  index.html  llms.txt  mkdocs.yml  pr_review.md  pr_review_phaseA.md  pr_review_phaseA_r2.md  pyproject.toml  requirements.txt  review.md  sitemap.xml
.claude-plugin/: marketplace.json
.github/workflows/: benchmarks.yml  ci.yml  codeql.yml  docs-deploy.yml  marketplace-lint.yml  refresh-bench-baselines.yml  release.yml  studio-post-deploy-smoke.yml  studio-vercel-deploy.yml  typecheck.yml
_archive/v0/: index.html
adr/: index.html
adr/ADR-0001-element-identity-and-polymorphic-serialization-envelope/: index.html
adr/ADR-0002-uuid-keyed-ordered-collection-model/: index.html
adr/ADR-0003-in-process-event-execution-lifecycle/: index.html
adr/ADR-0004-directed-graph-structural-invariants/: index.html
adr/ADR-0006-conversational-message-envelope-and-ordered-history/: index.html
adr/ADR-0007-canonical-turn-request-compilation-boundary/: index.html
adr/ADR-0008-pre-turn-context-provider-execution-and-attribution/: index.html
adr/ADR-0011-function-tool-descriptor-and-branch-registry/: index.html
adr/ADR-0012-branch-action-execution-and-event-lifecycle/: index.html
adr/ADR-0013-built-in-tool-provider-and-branch-binding/: index.html
adr/ADR-0016-branch-conversation-aggregate-and-attachment-boundary/: index.html
adr/ADR-0017-session-membership-and-coordination-boundary/: index.html
adr/ADR-0018-turn-scoped-branch-execution-state/: index.html
adr/ADR-0021-branch-operation-facade-and-turn-adapters/: index.html
adr/ADR-0022-composed-branch-operation-pipeline/: index.html
adr/ADR-0023-dependency-aware-operation-graph-execution-kernel/: index.html
adr/ADR-0024-lndl-operate-integration-adapter/: index.html
adr/ADR-0027-model-service-facade-and-endpoint-resolution/: index.html
adr/ADR-0028-validated-provider-adapter-catalog/: index.html
adr/ADR-0029-unified-request-admission-deadline-and-resilience-policy/: index.html
adr/ADR-0030-agentic-provider-adapter-boundary/: index.html
adr/ADR-0033-operation-graph-orchestration-boundary/: index.html
adr/ADR-0034-domain-engine-coordination-and-autonomy-safeguards/: index.html
adr/ADR-0035-persisted-run-completion-contract/: index.html
adr/ADR-0036-casts-role-palettes-as-playstyle/: index.html
adr/ADR-0037-resident-engine-host-and-task-queue/: index.html
adr/ADR-0038-escalation-tier-routing/: index.html
adr/ADR-0041-agent-specification-and-branch-construction/: index.html
adr/ADR-0042-casts-pattern-catalog-and-typed-role-authoring/: index.html
adr/ADR-0043-per-role-configuration-resolution/: index.html
adr/ADR-0044-agent-prompt-directives-and-executable-permissions/: index.html
adr/ADR-0047-hook-mechanism-scopes-and-canonical-ownership/: index.html
adr/ADR-0048-interoperable-external-hooks/: index.html
adr/ADR-0050-foundational-utility-and-typed-adaptation-strata/: index.html
adr/ADR-0051-lndl-language-and-operations-boundary/: index.html
adr/ADR-0052-supported-validation-and-testing-surfaces/: index.html
adr/ADR-0055-operational-state-persistence-boundary/: index.html
adr/ADR-0056-statedb-sqlalchemy-core-backend/: index.html
adr/ADR-0057-operational-lifecycle-and-transition-audit/: index.html
adr/ADR-0058-unified-lifecycle-transition-service/: index.html
adr/ADR-0059-durable-dispatch-outbox/: index.html
adr/ADR-0060-run-supervision-terminal-callback-and-orphan-detection/: index.html
adr/ADR-0062-cli-command-surface-ownership/: index.html
adr/ADR-0063-project-attribution-cascade/: index.html
adr/ADR-0064-cli-execution-outcome-and-completion-record/: index.html
adr/ADR-0065-marketplace-catalog-and-directory-discovery/: index.html
adr/TEMPLATE/: index.html
adrs/: index.html
api/: index.html
apps/studio/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/studio/desktop/src-tauri/assets/: setup.html
apps/studio/desktop/src-tauri/capabilities/: main.json
apps/studio/desktop/src-tauri/icons/: icon.icns
apps/studio/desktop/src-tauri/src/: backend.rs  commands.rs  lib.rs  main.rs  port.rs  setup_html.rs
benchmarks/: README.md  _compat.py  ci_check_provenance.py  ci_compare.py  concurrency_bench.py  fuzzy_bench.py  ln_bench.py  run_paired_ab.py
choosing-a-surface/: index.html
cli-reference/: index.html
code-of-conduct/: index.html
comparison/: index.html
concepts/: index.html
contributing/: index.html
cookbook/: index.html
cookbooks/: 005_react_basics.ipynb  006_operation_graphs_claim_extraction.ipynb  007_fan_out_in.py  008_react_with_tavily.ipynb
docs/: choosing-a-surface.md  cli-reference.md  concepts.md  contributing.md  followups-2026-06.md  index.md  llms.txt
examples/: capability_bus_demo.py  casts_composition.py  coding_agent.py  engine_lifecycle.py  event_lifecycle.py  hook_bus.py  orchestration_fanout.py  orchestration_flow.py  pile_and_types.py  reactive_spawn.py  run_local_examples.py
getting-started/: index.html
lionagi/: __init__.py  _class_registry.py  _errors.py  _paths.py  config.py  config_resolution.py  utils.py
marketplace/: .gitignore  README.md
marketplace-correctness/: SUMMARY.md
notebooks/: react.ipynb  react_rag.ipynb  research_with_exa.ipynb  test_persist.ipynb  using_ag2.ipynb
reference/: index.html
scripts/: build-studio-docker.sh  check_adr_status_sets.py  check_pyright_baseline.py  ci.sh  collect_flake_failures.py  flake_report.py  lint_notebook_hygiene.py  lint_python_hygiene.py  migrate_codex_runs.py  quarantine.py  rss_report.py  update_pyright_baseline.sh
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  marketplace_lint.py  quarantine.txt  test_class_registry.py  test_config.py  test_config_resolution.py  test_errors.py  test_import_laziness.py  test_init.py  test_public_api.py  test_runtime_control.py  test_utils.py
(+2814 files in other folders)
