[project]
name = "lionagi"
version = "0.26.12"
description = "An Intelligence Operating System."
authors = [
    { name = "HaiyangLi", email = "quantocean.li@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiocache>=0.12.0",
    "aiohttp>=3.13.0",
    "anyio>=4.10.0",
    "backoff>=2.1.0",
    "croniter>=1.4",
    "json-repair>=0.58.0",
    "msgspec>=0.20.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.8.0",
    "toml>=0.10.2",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.10.0",
    "aiosqlite>=0.21.0",
    "orjson>=3.11.8",
]
license = {file = "LICENSE"}
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Framework :: Pytest",
]

[dependency-groups]
dev = [
    "black[jupyter]>=26.3.1",
    "isort>=6.0.0",
    "pre-commit>=4.2.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.1.0",
    "sphinx-autobuild>=2024.10.3",
    "sphinx>=8.0.0",
    "furo>=2024.8.6",
    "ipython>=8.31.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "tqdm>=4.67.1",
    "pytest-cov>=6.1.1",
    "ruff>=0.12.0",
    "mkdocs>=1.6.1",
    "mkdocs-material[imaging]>=9.6.18",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-git-committers-plugin-2>=2.5.0",
    "mkdocstrings>=0.30.0",
    "mkdocstrings-python>=1.17.0",
    "trio>=0.30.0",
    "line-profiler>=5.0.0",
    "memory-profiler>=0.61.0",
    "hypothesis>=6.152.2",
    "pyarrow>=21.0.0",
    "pytest-xdist>=3.8.0",
    "pytest-timeout>=2.4.0",
    "pytest-benchmark>=5.1.0",
    "httpx>=0.28.1",
]

[project.scripts]
li = "lionagi.cli.main:main"

[project.optional-dependencies]

reader = [
    "docling>=2.91.0",
]

ollama = [
    "ollama>=0.6.1",
]

mcp = [
    "fastmcp>=3.2.0",
]

rich = [
    "rich>=13.0.0",
]

schema = [
    "datamodel-code-generator>=0.31.2",
]

pandas = [
    "pandas>=1.3.0",
]

postgres = [
    "pydapter[postgres]>=1.3.2",
    "asyncpg>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
]

sqlite = [
    # aiosqlite is now a core dependency; this extra is kept for backwards
    # compatibility with existing `pip install lionagi[sqlite]` invocations.
    "aiosqlite>=0.21.0",
]

graph = [
    "matplotlib>=3.7.0",
    "networkx>=3.0.0",
]

xml = [
    "xmltodict>=0.12.0",
]

ag2 = [
    "ag2[openai]>=0.13.0",
]

nlip = [
    "ag2[nlip,openai]>=0.13.0",
    "uvicorn>=0.34.0",
]

sandbox = [
    "ag2[nlip,openai]>=0.13.0",
    "daytona>=0.171.0",
    "uvicorn>=0.34.0",
]

testing = [
    # Optional YAML support for ScriptModel.from_yaml(); JSON/dict workflows
    # work without this extra.
    "pyyaml>=6.0",
]

studio = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pyyaml>=6.0",
    "starlette>=0.46.2",
    # F-A4-9 (ADR-0018 §"li studio extras dependency"): aiosqlite is required
    # by the studio services that query state.db directly (sessions, shows, runs,
    # definitions). It is also listed as a core dep but explicit in the extra
    # keeps the [studio] group self-contained for pip install lionagi[studio].
    "aiosqlite>=0.21.0",
]

all = [
    "lionagi[reader]",
    "lionagi[ollama]",
    "lionagi[mcp]",
    "lionagi[rich]",
    "lionagi[schema]",
    "lionagi[postgres]",
    "lionagi[graph]",
    "lionagi[sqlite]",
    "lionagi[xml]",
    "lionagi[ag2]"
]


[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "UP", "N", "S", "A"]
ignore = [
    "N805",   # pydantic validator first-arg naming
    "A004",   # ExceptionGroup stdlib shadowing (compat shim)
    "UP035",  # typing imports needed for Python 3.10
    "UP006",  # typing generics needed for Python 3.10
    "UP007",  # X | Y union syntax needs 3.10+ (already using from __future__)
    "S101",   # assert usage (fine in non-web library)
    "E501",   # line length (handled by formatter)
    "W293",   # blank line whitespace (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S",      # security rules relaxed in tests
    "A",      # builtin shadowing (test fixtures reuse names like `exit`, `aiter`)
    "B",      # bugbear relaxed in tests (assert patterns, loop vars, callables)
    "E402",   # import after pytest.importorskip (intentional)
    "E721",   # type comparison (test assertions)
    "E731",   # lambda assignment (test fixtures)
    "F401",   # unused imports (import-bridge tests verify importability)
    "F601",   # repeated dict keys (test fixture patterns)
    "F841",   # unused variable (test setup patterns)
    "UP045",  # X | None annotation (3.10 compat)
    "N",      # naming relaxed in tests
]
"cookbooks/**" = ["S101", "B904", "N"]
"scripts/**" = ["S", "E731"]
"apps/studio/**" = [
    "S108",   # /tmp in dev server
    "B007",   # unused loop vars
]

[tool.pytest.ini_options]
addopts = "-q -ra --strict-config --strict-markers --tb=short --maxfail=5 -n auto --dist loadfile --benchmark-disable"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
timeout = 300
timeout_method = "thread"
markers = [
    "performance: marks tests as performance benchmarks",
    "slow: marks tests as slow (> 1 second)",
    "integration: exercises multiple Studio server components, FastAPI TestClient, SQLite, or filesystem state",
    "unit: marks tests as unit tests",
    "asyncio: marks tests as async",
    "property: marks tests as property-based tests",
    "migration: marks tests as migration/compatibility tests",
    "network: requires network access",
]
filterwarnings = [
    # Ignore Pydantic deprecation warnings from external datamodel-code-generator
    "ignore:The `parse_obj` method is deprecated.*:pydantic.warnings.PydanticDeprecatedSince20",
    "ignore:The `dict` method is deprecated.*:pydantic.warnings.PydanticDeprecatedSince20",
    "ignore:The `__fields_set__` attribute is deprecated.*:pydantic.warnings.PydanticDeprecatedSince20",
    # pytest-benchmark emits this during configure when xdist is active; narrow filter keeps -W error usable
    "ignore:Benchmarks are automatically disabled because xdist plugin is active.Benchmarks cannot be performed reliably in a parallelized environment.:pytest_benchmark.logger.PytestBenchmarkWarning",
    "ignore::DeprecationWarning:^(?!lionagi\\.).*",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lionagi"]
artifacts = [
    "lionagi/py.typed",
    "lionagi/casts/roles/modes/*.md",
    "lionagi/casts/roles/*.md",
    "lionagi/casts/packs/*.yaml",
]

[tool.hatch.build]
exclude = [
    "dev/*",
    "data/*",
    "notebooks/*",
    "tests/*",
    "*.pyc",
    "__pycache__",
    "temp_logs/*",
    "logs/*"
]

[tool.uv]
# Force minimum versions for transitive deps with known vulnerabilities
constraint-dependencies = [
    "authlib>=1.6.11",      # CVE: CSRF when using cache
    "python-multipart>=0.0.27",  # CVE: DoS via unbounded multipart part headers
    "pytest>=9.0.3",        # CVE: vulnerable tmpdir handling
    "pillow>=12.2.0",       # CVE: FITS GZIP decompression bomb
    "pyjwt>=2.12.0",        # CVE: unknown crit header extensions
    "tornado>=6.5.5",       # CVE: multipart DoS, cookie validation
    "cairosvg>=2.9.0",      # CVE: recursive <use> exponential DoS
    "cryptography>=46.0.7", # CVE: buffer overflow on non-contiguous buffers; DNS name constraint enforcement
    "requests>=2.33.0",     # CVE: insecure temp file reuse in extract_zipped_paths
    "pygments>=2.20.0",     # CVE: ReDoS in GUID regex
    "lxml>=6.1.0",          # CVE-2026-41066: XXE via default iterparse / ETCompatXMLParser config
    "gitpython>=3.1.49",    # CVE: RCE via config_writer + path traversal in reference APIs
]
