[package]
name = "lion-studio"
version = "0.1.0"
description = "Lion Studio — macOS desktop shell"
authors = ["Lion Ecosystem"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "lion_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "lion-studio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["macos-private-api"] }
tauri-plugin-shell = "2.2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

thiserror = "2"
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
